[package]
name = "libdither"
version = "0.1.0"
authors = ["zyansheep <zyansheep@github.com>"]
edition = "2021"
description = "Wraps Node API with platform-specific features"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

node = { path = "node" }
rkyv_codec = "0.3.1"

[features]
